# Bragging-Brandy

./: .gitignore  CMakeLists.txt  CONSTITUTION.md  README.md  SPECIFICATION.md
.claude/: mcp-servers.md  settings.local.json
.specify/memory/: constitution.md
dependencies/install/lib/: zlibstatic.lib
dependencies/install/lib/pkgconfig/: assimp.pc
docs/: README.md  build-guide.md  cli-guide.md  contributing.md  performance.md  user-guide.md
docs/api/: README.md  core.md
examples/: README.md
src/: main.cpp
src/core/: BaseCanvas.h  BaseTypes.h  BaseWidget.h  CacheManager.h  DatabaseManager.cpp  DatabaseManager.h  FileSystemManager.h  ModelService.cpp  ModelService.h  SearchService.cpp  SearchService.h  TagManager.cpp  TagManager.h
src/nesting/: MaterialOptimizer.cpp  MaterialOptimizer.h
src/render/: LODRenderer.cpp  LODRenderer.h  ModelLoader.cpp  ModelLoader.h  ProgressiveLoader.cpp  ProgressiveLoader.h  ThumbnailGenerator.cpp  ThumbnailGenerator.h
src/repair/: MeshRepair.cpp  MeshRepair.h
src/tools/: FeedSpeedCalculator.cpp  FeedSpeedCalculator.h
src/ui/: CNCToolsCanvas.cpp  CNCToolsCanvas.h  CutListCanvas.cpp  CutListCanvas.h  DesignCanvas.cpp  DesignCanvas.h  MainWindow.cpp  MainWindow.h  ProjectCanvas.cpp  ProjectCanvas.h  SettingsCanvas.cpp  SettingsCanvas.h
src/utils/: CommandLineInterface.cpp  CommandLineInterface.h  Logger.cpp  Logger.h
tests/: CMakeLists.txt  run_tests.bat  run_tests.sh  test_main.cpp
tests/core/: test_model_service.cpp
tests/integration/: test_full_workflow.cpp
tools/: SETUP-GUIDE.md  qt6-install-script.qs  setup-dependencies.bat  setup-dependencies.sh
